--- a/_posts/2023-12-14-rbac-101.md
+++ b/_posts/2023-12-14-rbac-101.md
@@ -2,7 +2,7 @@
 title: "Azure Permissions 101: How to manage Azure access effectively"
 date: 2023-12-14 12:00:00 -500
 categories: [tech-blog]
-tags: [Azure Permissions, RBAC Domains, Classic Roles in Azure, Azure RBAC Roles, Azure AD Roles, EA RBAC (Enterprise Agreement RBAC), MCA RBAC (Microsoft Customer Agreement RBAC), Reserved Instance RBAC, Fine-Grained Access Control in Azure, Azure RBAC vs Classic Roles, Azure AD Global Admin Role, Azure AD Service Principals, EA Portal in Azure, Cost Management + Billing in Azure, Understand EA Roles in Azure, Azure MCA Roles, Reserved Instance Access Control,RBAC,Azure,Permissions]
+tags: [RBAC]
 ---
 
 While onboarding customers to Azure they ask what permissions do we need to assign to our IT Ops or to partners and I’ve seen customer gets confused when we ask them for Azure AD permission for some task and they say we’ve provided owner access on Azure Subscription why Azure AD permission is required and how this is related. So thought of writing this blog to share how many permission domains are there when you use Azure.
