--- a/_posts/2024-1-3-databox101.md
+++ b/_posts/2024-1-3-databox101.md
@@ -2,7 +2,7 @@
 title: "Learn How to master Azure Databox with these simple tips"
 date: 2024-1-5 12:00:00 +500
 categories: [tech-blog]
-tags: [Azure Databox, Databox tutorial, Data transfer speed, Data copy to Azure storage, Order Azure Databox, Azure Data Box requirements, Data transfer cables, Databox port configurations, Connect Databox to Azure, Databox copy operation,Robocopy for metadata preservation, Databox manifest files, Return pickup process for Databox, Databox Operations team, Data validation in Azure Databox, Tips for Databox order and copy process]
+tags: [Azure Databox]
 ---
 
 This blog is a collection of some practical experiences of working with Databox. Things that you should keep in mind while you order, connect and transfer data via Databox.
