--- a/_posts/2023-12-14-rbac-101.md
+++ b/_posts/2023-12-14-rbac-101.md
@@ -124,3 +124,7 @@ More information regarding who got access to RI is mentioned in the article belo
 
 Happy Learning!
 
+>Subscribe to my biweekly newsletter for the latest posts and summaries. Your privacy is paramount, and your email stays with us securely.
+click the link to submit your email.
+[https://forms.office.com/r/6ysKm4nkp4](https://forms.office.com/r/6ysKm4nkp4)
+{: .prompt-tip }
