--- a/_posts/2024-1-3-databox101.md
+++ b/_posts/2024-1-3-databox101.md
@@ -134,3 +134,8 @@ Once data is copied to respective destination, and if you've some files which we
 Conclusion : I hope the above screenshots and tips help you during your databox order and copy process. 
 
 Happy Learning!
+
+>Subscribe to my biweekly newsletter for the latest posts and summaries. Your privacy is paramount, and your email stays with us securely.
+click the link to submit your email.
+[https://forms.office.com/r/6ysKm4nkp4](https://forms.office.com/r/6ysKm4nkp4)
+{: .prompt-tip }
