--- a/_posts/2023-12-14-rbac-101.md
+++ b/_posts/2023-12-14-rbac-101.md
@@ -1,5 +1,5 @@
 ---
-title: "Azure Permissions 101: How to manage Azure access effectively"
+title: "Azure Permissions 101: Types of RBAC on Azure"
 date: 2023-12-14 12:00:00 -500
 categories: [tech-blog]
 tags: [RBAC]
