changed headings and made it 5o-60characters

--- a/_posts/2023-12-14-rbac-101.md
+++ b/_posts/2023-12-14-rbac-101.md
@@ -1,5 +1,5 @@
 ---
-title: "Azure Permissions 101: Types of RBAC on Azure"
+title: "How to Use Different Types of Azure RBAC Effectively"
 date: 2023-12-14 12:00:00 -500
 categories: [tech-blog]
 tags: [RBAC]
