--- a/_posts/2023-12-14-rbac-101.md
+++ b/_posts/2023-12-14-rbac-101.md
@@ -3,6 +3,7 @@ title: "How to Use Different Types of Azure RBAC Effectively"
 date: 2023-12-14 12:00:00 -500
 categories: [tech-blog]
 tags: [RBAC]
+description: "There are multiple distinct RBAC domains on Azure, explore different types of Azure RBAC which will help you in understanding Azure permissions"
 ---
 
 While onboarding customers to Azure they ask what permissions do we need to assign to our IT Ops or to partners and I’ve seen customer gets confused when we ask them for Azure AD permission for some task and they say we’ve provided owner access on Azure Subscription why Azure AD permission is required and how this is related. So thought of writing this blog to share how many permission domains are there when you use Azure.
