--- a/_posts/2024-1-3-databox101.md
+++ b/_posts/2024-1-3-databox101.md
@@ -3,6 +3,7 @@ title: "Learn How to master Azure Databox with these simple tips"
 date: 2024-1-5 12:00:00 +500
 categories: [tech-blog]
 tags: [Azure Databox]
+description: "Explore the essentials of Azure Data Box in our latest guide, providing you step by step guidance Learn more at Azure Doctor"
 ---
 
 This blog is a collection of some practical experiences of working with Databox. Things that you should keep in mind while you order, connect and transfer data via Databox.
