changed rbac blog alt image

--- a/_posts/2023-12-14-rbac-101.md
+++ b/_posts/2023-12-14-rbac-101.md
@@ -29,7 +29,7 @@ The person who created subscription would become service Admin and if that perso
 
 So when you go to Subscription -> IAM blade you’ll still see this. I have seen customers trying to provide owner access just try to use this Add Co-administrator button. Now you know the difference. This is not mean for providing someone access to ARM resource.
 
-![a](https://raw.githubusercontent.com/qureshiaquib/qureshiaquib.github.io/main/assets/14122023/Picture1.jpg)
+![Classic roles from ASM legacy](https://raw.githubusercontent.com/qureshiaquib/qureshiaquib.github.io/main/assets/14122023/classic-roles-asm-legacy.jpg)
 
 ## Azure RBAC
 
@@ -38,7 +38,7 @@ So, the user gets stored in Azure AD itself, but the permissions are maintained 
 
 In each RBAC we have Actions which basically tells the role what it can perform.
 
-![a](https://raw.githubusercontent.com/qureshiaquib/qureshiaquib.github.io/main/assets/14122023/Picture2.jpg)
+![RBAC role types on Azure](https://raw.githubusercontent.com/qureshiaquib/qureshiaquib.github.io/main/assets/14122023/rbac-role-types-azure.jpg)
 
 The actions are part of the control plane. Which you get access to manage the service and its settings or configurations. We also have data plane actions. Which provides you the actual data access. Let us take an example of Azure Blob storage, if you get reader role you would be able to see the resource itself but will not be able to see the actual data in blob storage if you authenticate via Azure AD. If you want to see the actual data, then you can get storage blob data contributor role assigned to the ID and you can see the actual data. Similarly, there are services which expose data actions e.g. Azure Key vault, Service Bus.
 
@@ -50,13 +50,13 @@ This is used when you deal with Azure AD itself or services of which roles are s
 
 This RBAC Domain is separate from the Azure RBAC, this gets stored in Azure AD itself and managed centrally from roles and administrator’s blade.
 
-![a](https://raw.githubusercontent.com/qureshiaquib/qureshiaquib.github.io/main/assets/14122023/Picture3.jpg)
+![Entra ID RBAC roles in Azure AD](https://raw.githubusercontent.com/qureshiaquib/qureshiaquib.github.io/main/assets/14122023/entra-id-rbac-roles-azure-ad.jpg)
 
 The person who created the tenant gets a global admin role and then we have fine grained access based on the roles.
 
 Though Azure AD roles are different than Azure RBAC which we assign to subscriptions, a global admin can elevate himself and get access to all the subscriptions in his tenant through a toggle.
 
-![a](https://raw.githubusercontent.com/qureshiaquib/qureshiaquib.github.io/main/assets/14122023/Picture4.jpg)
+![Get Admin access to all the subscription](https://raw.githubusercontent.com/qureshiaquib/qureshiaquib.github.io/main/assets/14122023/admin-access-all-subscriptions.jpg)
 
 Once you enable this toggle you get the user access administrator role at the root scope under which all the management group gets created. So eventually you can access all the subscriptions.
 
@@ -82,11 +82,11 @@ If you are an enterprise customer and have signed up for the EA Agreement from M
 Which set of permission is assigned at specific hierarchy can be explained through the below image.
 this is copied from Microsoft learn documentation mentioned below.
 
-![a](https://raw.githubusercontent.com/qureshiaquib/qureshiaquib.github.io/main/assets/14122023/Picture5.jpg)
+![EA hierarchy of department and accounts](https://raw.githubusercontent.com/qureshiaquib/qureshiaquib.github.io/main/assets/14122023/ea-hierarchy-department-accounts.jpg)
 
 Below is the sample screenshot which you see when you click on cost management + billing portal. Here you will see Accounts, Departments, subscriptions.
 
-![a](https://raw.githubusercontent.com/qureshiaquib/qureshiaquib.github.io/main/assets/14122023/Picture6.jpg)
+![Billing and accounts](https://raw.githubusercontent.com/qureshiaquib/qureshiaquib.github.io/main/assets/14122023/	billing-and-accounts.jpg)
 
 [https://learn.microsoft.com/en-us/azure/cost-management-billing/manage/direct-ea-administration](https://learn.microsoft.com/en-us/azure/cost-management-billing/manage/direct-ea-administration)
 [https://learn.microsoft.com/en-us/azure/cost-management-billing/manage/understand-ea-roles](https://learn.microsoft.com/en-us/azure/cost-management-billing/manage/understand-ea-roles)
@@ -96,7 +96,7 @@ Below is the sample screenshot which you see when you click on cost management +
 If you have purchased MCA, then you get hierarchy for permissions to be assigned.
 Top level permissions are assigned at the billing scope and then billing profile level.
 
-![a](https://raw.githubusercontent.com/qureshiaquib/qureshiaquib.github.io/main/assets/14122023/Picture7.jpg)
+![RBAC in MCA](https://raw.githubusercontent.com/qureshiaquib/qureshiaquib.github.io/main/assets/14122023/rbac-mca.jpg)
 
 Billing account owner and Billing profile owner are the most common role you will use. More roles are mentioned in the article below which you can go through.
 
@@ -109,15 +109,15 @@ Few years back the person who purchased reservation used to be the one who provi
 
 Reservations when purchased by an admin he can see/manage it and seen by EA Admin or a person with reservation administrator role. 
 
-![a](https://raw.githubusercontent.com/qureshiaquib/qureshiaquib.github.io/main/assets/14122023/Picture8.jpg)
+![RBAC for Reserved Instance management](https://raw.githubusercontent.com/qureshiaquib/qureshiaquib.github.io/main/assets/14122023/rbac-reserved-instance-management.jpg)
 
-![a](https://raw.githubusercontent.com/qureshiaquib/qureshiaquib.github.io/main/assets/14122023/Picture9.jpg)
+![Reservation reader and purchaser](https://raw.githubusercontent.com/qureshiaquib/qureshiaquib.github.io/main/assets/14122023/reservation-reader-purchaser.jpg)
 
-![a](https://raw.githubusercontent.com/qureshiaquib/qureshiaquib.github.io/main/assets/14122023/Picture10.jpg)
+![Reservation Administrator RBAC role](https://raw.githubusercontent.com/qureshiaquib/qureshiaquib.github.io/main/assets/14122023/reservation-administrator-rbac-role.jpg)
 
 You can do this via PowerShell too, check this document for more information.
 
-![a](https://raw.githubusercontent.com/qureshiaquib/qureshiaquib.github.io/main/assets/14122023/Picture11.jpg)
+![Some notes about who can manage reservation](https://raw.githubusercontent.com/qureshiaquib/qureshiaquib.github.io/main/assets/14122023/notes-who-manage-reservation.jpg)
 
 More information regarding who got access to RI is mentioned in the article below.
 
