--- a/_posts/2024-1-3-databox101.md
+++ b/_posts/2024-1-3-databox101.md
@@ -23,7 +23,7 @@ First thing you’ll need to ask yourself whether you really need a databox for 
 
 Some sample data transfer speed and time it took to copy is mentioned in below image. This is copied from MS Doc.
 
-![a](https://raw.githubusercontent.com/qureshiaquib/qureshiaquib.github.io/main/assets/05012024/Picture002.jpg)
+![Data transfer speed and time](https://raw.githubusercontent.com/qureshiaquib/qureshiaquib.github.io/main/assets/05012024/data-transfer-speed-time.jpg)
 
 Now, let's proceed further and assume you've decided to copy data via Databox.
 Before you order, you’ll need to know few things about databox. There are different ports Data1, Data2, Data3 and MGMT. Mgmt is used to take control of the databox via a Web UI and set it up. Data port is used to transfer data. When you order a device on the portal you can find the password. You’ll need to enter the password to unlock the device.
@@ -51,9 +51,9 @@ If you want to check which cable is supported, you can refer to this extensive g
 
 Mine looked like this:
 
-![a](https://raw.githubusercontent.com/qureshiaquib/qureshiaquib.github.io/main/assets/05012024/Picture003.jpg)
+![Cable SPF+ copper twinax](https://raw.githubusercontent.com/qureshiaquib/qureshiaquib.github.io/main/assets/05012024/cable-spf-copper-twinax.jpg)
 
-![a](https://raw.githubusercontent.com/qureshiaquib/qureshiaquib.github.io/main/assets/05012024/Picture004.jpg)
+![connector of copper twinax](https://raw.githubusercontent.com/qureshiaquib/qureshiaquib.github.io/main/assets/05012024/connector-copper-twinax.jpg)
 
 
 ## Order
@@ -66,7 +66,7 @@ When we order databox and start filling details on portal. You will be asked to 
 
 * If you’ve enabled private endpoint on storage account and have disabled public access. You’ll need to make sure you check the box which allows trusted service to connect to storage. Otherwise, you would be able to copy the data to databox but the copy operation from Databox to File Share would fail.
 
-![a](https://raw.githubusercontent.com/qureshiaquib/qureshiaquib.github.io/main/assets/05012024/Picture005.jpg)
+![Networking setting of Storage account ](https://raw.githubusercontent.com/qureshiaquib/qureshiaquib.github.io/main/assets/05012024/networking-setting-storage-account.jpg)
 
 >You can order the device, copy and then Microsoft will erase the data and will re-use the same device. If you need your own disk for data transfer and then you want to destroy or keep it with you then you can explore the databox disk option where you can use your own disk.
 Or legacy Import/Export service.
@@ -98,11 +98,11 @@ Robocopy parameters are documented.
 
 This is how it looks like once the copy operation is completed.
 
-![a](https://raw.githubusercontent.com/qureshiaquib/qureshiaquib.github.io/main/assets/05012024/Picture006.jpg)
+![Databox screen once copy operation completed](https://raw.githubusercontent.com/qureshiaquib/qureshiaquib.github.io/main/assets/05012024/databox-copy-operation-completed.jpg)
 
-![a](https://raw.githubusercontent.com/qureshiaquib/qureshiaquib.github.io/main/assets/05012024/Picture007.jpg)
+![Second screenshot of Databox after copy operation](https://raw.githubusercontent.com/qureshiaquib/qureshiaquib.github.io/main/assets/05012024/second-screenshot-databox-copy.jpg)
 
-![a](https://raw.githubusercontent.com/qureshiaquib/qureshiaquib.github.io/main/assets/05012024/Picture008.jpg)
+![Final preparation of Databox](https://raw.githubusercontent.com/qureshiaquib/qureshiaquib.github.io/main/assets/05012024/final-preparation-databox.jpg)
 
 Once the data gets copied you can download the manifest files. Which contains all the files which were copied to databox successfully. It'll show the size of the file and its name. Keep this file with you and compare when data copy is successfully completed in Storage Account.
 
@@ -129,7 +129,7 @@ Which you'll need to share with Datacenter operations team to make the device re
 
 Once data is copied to respective destination, and if you've some files which were not copied. Check the order job and you’ll find the same.
 
-![a](https://raw.githubusercontent.com/qureshiaquib/qureshiaquib.github.io/main/assets/05012024/Picture009.jpg)
+![Data errors once data upload is completed](https://raw.githubusercontent.com/qureshiaquib/qureshiaquib.github.io/main/assets/05012024/data-errors-upload-completed.jpg)
 
 
 Conclusion : I hope the above screenshots and tips help you during your databox order and copy process. 
