--- a/_posts/2024-1-3-databox101.md
+++ b/_posts/2024-1-3-databox101.md
@@ -136,7 +136,7 @@ Conclusion : I hope the above screenshots and tips help you during your databox 
 
 Happy Learning!
 
->Subscribe to my biweekly newsletter for the latest posts and summaries. Your privacy is paramount, and your email stays with us securely.
+>Subscribe to my newsletter for the latest posts and summaries. Your privacy is paramount, and your email stays with us securely.
 click the link to submit your email.
 [https://forms.office.com/r/6ysKm4nkp4](https://forms.office.com/r/6ysKm4nkp4)
 {: .prompt-tip }
