--- a/_posts/2023-12-14-rbac-101.md
+++ b/_posts/2023-12-14-rbac-101.md
@@ -123,6 +123,8 @@ More information regarding who got access to RI is mentioned in the article belo
 
 [https://learn.microsoft.com/en-us/azure/cost-management-billing/reservations/view-reservations](https://learn.microsoft.com/en-us/azure/cost-management-billing/reservations/view-reservations)
 
+Share the blogpost if you like it.
+
 Happy Learning!
 
 >Subscribe to my newsletter for the latest posts and summaries. Your privacy is paramount, and your email stays with us securely.
